--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "next": "14.2.4",
     "react": "^18",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "eslint": "^8",
